refactor: remove unnecessary Serializable implementation and suppress warnings in various classes